[package]
name = "c_sharp_controlpads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
controlpad_server = { path = "../ControlpadServer" }

[lib]
#crate-type = ["staticlib"]
crate-type = ["rlib", "dylib"]